@@ -93,17 +93,7 @@ This test instance of d-portal number <span class="beige_key">{beige_instance_ke
 		</div>
 	</div>
 	<div class="footer_wrap footer_white">
-		<div class="footer">
-			<div class="footer_link footer_block nunito-sans-600">
-				{large_footer_links}
-			</div>
-		</div>
-		<div class="footer_line"></div>
-		<div class="footer">
-			<div class="footer_link footer_block nunito-sans-600">
-				{large_footer_info}
-			</div>
-		</div>
+
 		<div class="footer_line"></div>
 		<div class="footer">
 			<div class="footer_link footer_block footer_copy nunito-sans-600">
@@ -115,6 +105,7 @@ This test instance of d-portal number <span class="beige_key">{beige_instance_ke
 		</div>
 	</div>
 </div>
+
 
 #large_footer_links
 <div class="footer_header hanken-grotesk-700">{footer25_text}</div>
