@@ -1,6 +1,7 @@
 Development Portal (2025-08-27 shi)
 ==============================
 Fix dquery css
+Update footer
 
 
 Development Portal (2025-07-31 shi)
